// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput is a textarea 1`] = `
<textarea
  class="ds-c-field"
  id="static-id"
  name="spec-field"
/>
`;

exports[`TextInput is an input field 1`] = `
<input
  class="ds-c-field"
  id="static-id"
  name="spec-field"
  type="text"
/>
`;
